# AetherGrid

./: ARCHITECTURE.MD  IMPLEMENTATION_GUIDE.MD  ROADMAP_AI_COMPUTE.MD  models.py  node.py  pyproject.toml  simulator.py  storage.py  test_compute_cloud.sh  verify_election.py  verify_final_engine.py  verify_multi_process.py  verify_persistence.py  verify_replication.py  verify_snapshots.py  verify_zombie_worker.py
aethergrid/: __init__.py  cli.py  grpc_services.py
aethergrid/config/: __init__.py  loader.py
aethergrid/core/: __init__.py  joint_consensus.py  raft_node.py  state_machine.py
aethergrid/storage/: __init__.py  backend.py
aethergrid/testing/: __init__.py  benchmark.py  chaos.py
aethergrid/worker/: __init__.py  agent.py  daemon.py
aethergrid/workflow/: __init__.py  engine.py
examples/: train_mock.py
proto/: aethergrid.proto
scripts/: dev_cluster.py
tests/: conftest.py  test_zombie_worker.py
